# PCH-recording

./: README.md
.github/workflows/: 00-build-kamailio-docker-image.yml  01-build-web-panel-docker-image.yml  02-build-rtpengine-docker-image.yml  03-build-rtpengine-recorder-image.yml
demo/: .env  docker-compose.yml  kamailio.cfg  readme.txt  rtpengine.conf
demo/init-db-sql-files/: 02-acc-create.sql  99-create-user.sh  acc-create.sql
docs/: deploy-on-almalinux.md  deploy-on-ubuntu.md
kamailio/: Dockerfile  entrypoint.sh
rtpengine/: Dockerfile  entrypoint.sh
rtpengine-recorder/: Dockerfile  entrypoint.sh
web-panel/: Dockerfile  Pipfile  README.md  app.py  config.py  pyproject.toml  setup.sh
web-panel/setup/: docker-compose.yml
web-panel/setup/init-db-sql-files/: 99-imported-cdr.sql
web-panel/templates/: index.html  layout.html  table.tmpl
web-panel/web-panel/: app.py
web-panel/web-panel/templates/: table.html
web-panel/web_panel/: __init__.py
